# cpp_minidb

./: CMakeLists.txt  data_structure.h  main.cpp
core/: core_processing.cpp  core_processing.h
file/: files_processing.cpp  files_processing.h
lexical/: lexical_analysis.cpp  lexical_analysis.h
table/: table.cpp  table.h
